WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162718
Clang 3.9 reports a compilation warning about ENABLE_EXCEPTION_SCOPE_VERIFICATION
https://bugs.webkit.org/show_bug.cgi?id=162718
Summary
Clang 3.9 reports a compilation warning about ENABLE_EXCEPTION_SCOPE_VERIFICA...
Fujii Hironori
Reported
2016-09-28 23:24:23 PDT
Clang 3.9 have introduced a new compilation warning.
https://reviews.llvm.org/D15866
http://llvm.org/viewvc/llvm-project?view=revision&revision=258128
> ../../Source/JavaScriptCore/runtime/VM.h:656:5: warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined] > #if ENABLE(EXCEPTION_SCOPE_VERIFICATION) > ^ > ../../Source/WTF/wtf/Platform.h:56:63: note: expanded from macro 'ENABLE' > #define ENABLE(WTF_FEATURE) (defined ENABLE_##WTF_FEATURE && ENABLE_##WTF_FEATURE) > ^ > <scratch space>:26:1: note: expanded from here > ENABLE_EXCEPTION_SCOPE_VERIFICATION > ^ > ../../Source/WTF/wtf/Platform.h:899:47: note: expanded from macro 'ENABLE_EXCEPTION_SCOPE_VERIFICATION' > #define ENABLE_EXCEPTION_SCOPE_VERIFICATION (!defined(NDEBUG)) > ^ > In file included from ../../Source/JavaScriptCore/llint/LLIntOffsetsExtractor.cpp:28: > In file included from ../../Source/JavaScriptCore/bytecode/ArrayProfile.h:29: > In file included from ../../Source/JavaScriptCore/runtime/JSArray.h:24: > In file included from ../../Source/JavaScriptCore/runtime/ButterflyInlines.h:28: > In file included from ../../Source/JavaScriptCore/runtime/ArrayStorage.h:33: > In file included from ../../Source/JavaScriptCore/runtime/Structure.h:28: > In file included from ../../Source/JavaScriptCore/runtime/ClassInfo.h:25: > In file included from ../../Source/JavaScriptCore/interpreter/CallFrame.h:29:
Attachments
Patch
(1.48 KB, patch)
2016-09-28 23:29 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
build log of gtk port release build
(587.24 KB, text/plain)
2016-09-29 00:10 PDT
,
Fujii Hironori
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(1.08 MB, application/zip)
2016-09-29 00:47 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2016-09-28 23:29:58 PDT
Created
attachment 290183
[details]
Patch
Alex Christensen
Comment 2
2016-09-28 23:44:09 PDT
Is this the only problem with compiling WebKit with Clang 3.9?
Fujii Hironori
Comment 3
2016-09-29 00:10:07 PDT
Created
attachment 290185
[details]
build log of gtk port release build This is the only significant problem which emits a lot of warning messages. There are some minor compilation warnings. But, I'm not sure which is introdueced by Clang 3.9 and which is also emitted by Clang 3.8. Becuase I tested only Clang 3.9 today.
Build Bot
Comment 4
2016-09-29 00:47:46 PDT
Comment on
attachment 290183
[details]
Patch
Attachment 290183
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2166641
New failing tests: fast/images/pdf-as-image-with-annotations.html
Build Bot
Comment 5
2016-09-29 00:47:50 PDT
Created
attachment 290187
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Fujii Hironori
Comment 6
2016-09-29 01:02:30 PDT
(In reply to
comment #4
)
> New failing tests: > fast/images/pdf-as-image-with-annotations.html
This error seems a false positive. Because this test case has failed as flaky crash on Mac port.
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#tests=fast%2Fimages%2Fpdf-as-image-with-annotations.html
WebKit Commit Bot
Comment 7
2016-09-29 08:15:17 PDT
Comment on
attachment 290183
[details]
Patch Clearing flags on attachment: 290183 Committed
r206580
: <
http://trac.webkit.org/changeset/206580
>
WebKit Commit Bot
Comment 8
2016-09-29 08:15:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug