Clang 3.9 reports a compilation warning about ENABLE_EXCEPTION_SCOPE_VERIFICATION https://bugs.webkit.org/show_bug.cgi?id=162718

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-09-29
Reviewed by Alex Christensen.

Clang 3.9 reports a following compilation warning:
  Source/JavaScriptCore/runtime/VM.h:656:5: warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]

* wtf/Platform.h: Changed the definition of ENABLE_EXCEPTION_SCOPE_VERIFICATION not to use 'defined'.

Canonical link: https://commits.webkit.org/180663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206580 268f45cc-cd09-0410-ab3c-d52691b4dbfc